Changed defauld README markdown file

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,10 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+A buying/selling platform built for students of Jacobs University Bremen to (hopefully) reduce the number of spams sent on the exchange mailing list. 
 
-Things you may want to cover:
+* Ruby version : 2.1.2p95
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* Database : Development : SQLite, Test : SQLite3, Production : PostgreSQL
 
 
-Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
